# impact-cyber

./: README.md  package-lock.json
backend/: .gitignore  breaches_helper.py  duckdb_helper.py  main.py  pyproject.toml
backend/app/: routes.py  services.py
backend/data/: data-breaches.csv
backend/data/tmp/: breaches.duckdb
backend/routes/: breach_check_route.py  breachcheckroute.py  news_query_route.py  newsqueryroute.py  privacy_spy_route.py  privacyspyroute.py
backend/services/: breach_check.py  breachcheck.py  newsscrape.py  privacyspy.py
client/: package-lock.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Footer.tsx  NavigationBar.tsx  SearchBar.tsx  VignetteCard.tsx
frontend/src/components/BreachCard/: BreachCard.tsx
frontend/src/components/InfoCard/: InfoCard.tsx
frontend/src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
frontend/src/components/TrustedResources/: TrustedResources.tsx
frontend/src/css/: LandingPage.css
frontend/src/pages/: AboutPage.tsx  BestPracticePage.tsx  HomePage.tsx  LandingPage.tsx  ResourcePage.tsx  ToolPage.tsx
