[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for our project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
