[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for our project"
authors = ["Your Actual Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pandas = "^2.2.3"
duckdb = "^1.1.3"
flask-cors = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
